regression_tests/snap/check/teststm2/teststm2.lst
================================================================================

                      PROGRAM SNAP  Version 2.7.14-f49fb6c

                       Survey Network Adjustment Program

                    Copyright: Land Information New Zealand
                              Author: Chris Crook
                       Version date: Sep  5 2018 13:25:47

================================================================================
                     Run at  7-SEP-2018 14:38:04 by ccrook




================================================================================
Regression tests - multiple coordinate files                 7-SEP-2018 14:38:04

                                     ERRORS

================================================================================

Note: 4 errors reported in teststm2.err
